--- a/kuber/applier.yml
+++ b/kuber/applier.yml
@@ -1,19 +1,19 @@
 apiVersion: v1
 kind: ReplicationController
 metadata:
-    name: applier-2.3.11
+  name: applier-2.3.12
 spec:
   replicas: 20
   selector:
     app: applier
-    version: 2.3.11
+    version: 2.3.12
   template:
     metadata:
       labels:
         app: applier
-        version: 2.3.11
+        version: 2.3.12
     spec:
       containers:
-      - name: applier
-        image: gcr.io/sojern-platform/applier:2.3.11
+      - image: gcr.io/sojern-platform/applier:2.3.12
+        name: applier
       imagePullPolicy: PullAlways
