--- a/kuber/my-nginx.yml
+++ b/kuber/my-nginx.yml
@@ -1,19 +1,19 @@
 apiVersion: v1
 kind: ReplicationController
 metadata:
-  name: applier-2.3.20
+  name: my-nginx
 spec:
-  replicas: 20
+  replicas: 3
   selector:
-    app: applier
+    app: my-nginx
     version: 2.3.20
   template:
     metadata:
       labels:
-        app: applier
+        app: my-nginx
         version: 2.3.20
     spec:
       containers:
-      - image: gcr.io/sojern-platform/applier:2.3.20
-        name: applier
+      - image: kubernetes.io/hostname=10.245.1.3
+        name: my-nginx
       imagePullPolicy: PullAlways
