--- a/kuber/my-nginx.yml
+++ b/kuber/my-nginx.yml
@@ -14,6 +14,6 @@ spec:
         version: 2.3.20
     spec:
       containers:
-      - image: kubernetes.io/hostname=10.245.1.3
+      - image: kubernetes.io/hostname=localhost
         name: my-nginx
       imagePullPolicy: PullAlways
